src/css/mainstyle.css
/* Media queries - Responsividade CSS */


@media (min-width: 360px) and (max-width: 599px) { /* Dispositivos móveis entre 360px e 600px de largura */
    #sect1{
        height: 398px !important;
    }

    .diagonal-box-header{
        height: 348px !important;
        transform: skewY(18deg) !important;
    }

    .diagonal-box-header::before{
        height: 388px !important;
        margin-top: -35% !important;
    }
    
    #container-header{
        transform: skewY(-18deg) !important;
    }

    .title-sct-1{
        margin: 66px 0px 0px 0px !important;
        text-align: left !important;
        font-weight: normal;
    }

    .title-sct-2{
        margin-bottom: 9px !important;
        text-align: left;
    }

    .subtitle-sct-1{
        text-align: left;
        width: 360px !important;
        margin: 0px 0px 56px 0px !important;
    }

    .box-buttons-guide{
        padding: 0px !important;
    }

    .btn-guide:first-child{
        margin: 0px 21px 20px 25px;
    }

    .btn-guide:nth-child(2){
        margin: 0px 41px 20px 0px;
    }

    
    .btn-guide:nth-child(3){
        margin: 0px 21px 0px 25px;
    }
    
    .btn-guide:nth-child(4){
        margin: 0px 41px 0px 0px;
    }


    .title-sct2-1{
        margin: 29px 0px 17px 16px !important;
    }
    
    .paragraph-sct2-1{
        margin: 0px 0px 30px 16px !important;
        width: 386px !important;
    }

    #form-algorithm{
        margin: 0px 0px 91px 16px !important;
    }

    .input-sct2-control{
        width: 385px !important;
    }

    .btn-send{
        width: 383px !important;
    }

    .padding-sm{
        padding: 0px !important;
    }

    .box-title-line-half{
       margin-bottom: 23px;
    }

    #container-product{
        margin-top: 0px !important;
    }

    #grid-product{
        margin-top: 0px !important;
    }

    .box-product{
        display: flex !important;
        width: 400px !important;
        padding: 0px !important;
        margin: 0px 0px 30px 10px !important;
    }

    .img-product{
        width: 169px !important ;
    }

    .flex-block{
        display: block !important;
        margin-left: 23px !important;
    }

    .name-product{
        margin: 0px 0px 13px 0px !important;
    }

    .descript-product{
        display: none !important;
    }

    .box-product{
        margin: 0px 41px 39px 0px;
        width: 200px;
     }

     .btn-see-more{
         margin-bottom: 129px !important;
     }

    .btn-lot-more {
        border: 1px solid #707070;
        background-color: #ffffff;
        color: #888888;
        border-radius: 4px;
        width: 383px;
        height: 39px;
        cursor: pointer;
        text-align: center;
        font-size: 16px;
    }

    .collapsible:nth-child(n+5){
        padding: 0 18px;
        display: none !important;
        overflow: hidden;
    }

    .box-title-line-half{
        margin-bottom: 28px !important;
    }

    .paragraph-sect4{
        margin: 0px 20px 28px 17px !important;
        line-height: 16px;
        width: 386px !important;
    }

    #row-newsletter div.col-xl-4:first-child{
        padding: 0px 0px 0px 16px !important;
        margin: 0px 0px 20px 16px !important;
        width: 100% !important;
    }
    
    #row-newsletter div.col-xl-4:nth-child(2){
        padding: 0px 0px 0px 16px !important;
        width: 100% !important;
        margin: 0px 0px 42px 16px !important;
    }

    .input-newsletter{
        width: 391px !important;
    }

}


@media (min-width: 600px) and (max-width: 991.98px) { /* Dispositivos móveis entre 600px e 991.98px de largura */
    .diagonal-box-header{
        height: 188px !important;
    }

    .diagonal-box-header::before{
        height: 188px !important;
        margin-top: -13% !important;
    } 

    .title-sct-1{
        margin: 31px 0px 5px 0px !important;
    }

    .title-sct-2{
        margin-bottom: 9px !important;
    }

    .subtitle-sct-1{
        text-align: center !important;
        width: 360px !important;
        margin: auto;
        margin-top: 0px !important;
    }

    #grid-btns-header{
        display: none !important;
    }
    
    #sect1{
        height: 198px !important;
    }

    

    .title-sct2-1{
        display: none !important;
    }

    .paragraph-sct2-1{
        display: none !important;
    }

    .title-email-mkt{
        display: block !important;
        font-size: 20px;
        margin: 5.8px 0px 9px 21px;
        color: #888888;
    }

    .descript-email-mkt{
        display: block !important;
        font-size: 12px;
        color: #888888;
        margin: 0px 0px 17px 21px;
        line-height: 18px;
        width: 513px;
    }

    #form-algorithm{
        display: none !important;
    }

    .box-title-line-half{
        display: none;
    }

    #container-product{
        margin-top: 0px !important;
    }

    #grid-product{
        margin-top: 20px !important;
    }

    #sect4{
        display: none;
    }

    .box-product{
        margin: 0px 41px 39px 0px;
        width: 200px;
     }

     .btn-see-more{
         display: none;
     }

    .btn-lot-more {
        border: 1px solid #707070;
        background-color: #ffffff;
        color: #888888;
        border-radius: 4px;
        width: 383px;
        height: 39px;
        cursor: pointer;
        text-align: center;
        font-size: 16px;
    }

    .collapsible {
        padding: 0 18px;
        display: none;
        overflow: hidden;
        background-color: #f1f1f1;
    }


}



/*Section 1 - Header */
#sect1{
    height: 399px;
}

.diagonal-box-header{ /*Classe para container diagonal */
    position: relative;
    background-color: #707070;
    transform: skewY(4deg);
    height:  350px;
}

.diagonal-box-header::before{ /*Pseudoclasse para estilização diagonal, superhero - Camada inferior*/
    content: '';
    position: absolute;
    margin-top: -10%;
    left: 0;
    width: 100%;
    height:  350px;
    background-color: #707070;
    clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% calc(100% - 50px));
}

#container-header{
    position: relative;
    z-index: 1;
    transform: skewY(-4deg);
}


.title-sct-1{
    font-size: 20px;
    color: #ffffff;
    margin: 69px 0px 0px 0px;
}

.title-sct-2{
    font-size: 40px;
    color: #ffffff;
}

.subtitle-sct-1{
    margin: 24px 0px 50px 0px;
    font-size: 14px;
    color: #ffffff;
}

.title-email-mkt{
    display: none;
}

.descript-email-mkt{
    display: none;
}

.box-buttons-guide{
    text-align: center!important;
}

.btn-guide{
    display: inline-block;
    font-weight: normal;
    line-height: 1.5;
    color: #888888;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    border: 1px solid #707070;
    padding: 6px 12px;
    font-size: 14px;
    border-radius: 4px;
    width: 160px;
    height: 40px;
    background-color: #ffffff;
    box-shadow: 0px 1px 6px #00000029;
    margin-right: 40px;
}

/* Section 2 - Form */

.title-sct2-1{
    margin: 20px 0px 30px 0px;
    font-size: 20px;
    color: #888888;
}

.paragraph-sct2-1{
    font-size: 12px;
    color: #888888;
}

/*Form*/
#form-algorithm{
    margin-left: 60px;
}

.input-sct2-control{
    display: block;
    width: 340px;
    height: 30px;
    padding: .375rem .75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    border: 1px solid #707070;
    border-radius: 0px;
}

.label-sct2-control{
    margin: 20px 0px 7px 0px;
    font-size: 12px;
    color: #707070;
}

.box-radio{
    margin: 20px 40px 23px 0px;
}

.input-sct2-radio{

}

.label-sct2-radio{
    font-size: 12px;
    color: #707070;
}
.btn-send{
    display: inline-block;
    font-weight: normal;
    line-height: 1.5;
    color: #888888;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    background-color: transparent;
    padding: 6px 12px;
    font-size: 14px;
    border-radius: 4px;
    border: 1px solid #707070;
    width: 340px;
    height: 39px;
    font-size: 16px;
    margin-right: 40px;
}

/* Section 3 - Grid Product */

#container-product{
    margin-top: 79px;
}

.box-title-line-half{
    width: 100%;
    text-align: center;
    position: relative;
}

.box-title-line-half::after{
    content:'';
    position: absolute;
    left: 0;
    right: 0;
    top: 50%;
    height: 1px;
    background: #707070;
    z-index:0;
     
}

.title-line-half{
    font-size: 18px; 
    color: #888888;
    position:relative; 
    padding:10px;
    background: #ffffff;
    display: inline-block;
    z-index: 1;
    margin-bottom: 0px !important;
}

#grid-product{
    margin-top: 50px;
}



.box-product{
   margin: 0px 0px 39px 0px;
}



.img-product{
    border: 1px solid #707070;
    width: 200px;
    height: 150px;
}

.name-product{
    margin: 14px 0px 10px 0px;
    font-size: 14px;
    color: #888888;
}

.descript-product{
    width: 200px;
    line-height: 16px;
    font-size: 12px;
    color: #888888;

}

.previous-value-product{
    font-size: 12px;
    color: #888888;
    margin-bottom: 6px;
}

.later-value-product{
    font-size: 16px;
    color: #888888;
    font-weight: bold;
    margin-bottom: 7px;
}

.credit-value-product{
    font-size: 12px;
    color: #888888;
    margin-bottom: 10px;
}

.btn-buy{
    border-radius: 4px;
    border: 1px solid #707070;
    background-color: #ffffff;
    color: #888888;
    font-size: 16px;
    height: 30px;
    width: 200px;
}

.btn-see-more{
    border-radius: 4px;
    border: 1px solid #707070;
    background-color: #ffffff;
    color: #888888;
    font-size: 16px;
    height: 39px;
    width: 260px;
    margin-bottom: 128px;
}

.btn-lot-more{
    display: none;
}

/*Section 4 - Newsletter form */
#row-newsletter div.col-xl-4:first-child{
    padding: 0px!important;
    width: 340px;
}

#row-newsletter div.col-xl-4:nth-child(2){
    padding: 0px!important;
    margin-left: 40px;
}


.paragraph-sect4{
    color: #888888;
    font-size: 14px;
    margin-bottom: 39px;
    text-align: center;
}

.label-newsletter{
    color: #888888;
    font-size: 12px;
    margin-bottom: 7px;
}

.input-newsletter{
    border:1px solid #707070;
    height: 30px;
    width: 340px;
}

.btn-send-newsletter{
    border-radius: 4px;
    border: 1px solid #707070;
    background-color: #ffffff;
    color: #888888;
    font-size: 16px;
    height: 39px;
    width: 260px;
    margin:50px 0px 71px 0px;
}

/* Section 5 - Footer */

.footer-phrase{
    color: #ffffff;
    font-size: 12px;
    line-height: 18px;
    margin: 90px 0px 86px 0px;
    text-align: center;
}

#sect5{
    margin-top: 70px; 
    height: 228px;
}

.diagonal-box-footer{ /*Classe para container diagonal */
    position: relative;
    background-color: #707070;
}

.diagonal-box-footer::before{ /*Pseudoclasse para estilização diagonal, superhero - Camada inferior*/
    /*content: '';
    position: absolute;
    left: 0;
    width: 100%;
    height:  293px;
    clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% calc(100% - 50px));*/
    background-color: #707070;
    content: '';
    display: block;
    height: 75%;
    left: 0;
    position: absolute;
    right: 0;
    z-index: -1;
    top: 0;
    transform: skewY(-4deg);
    transform-origin: 0% 0;
}

.diagonal-box-footer::after{
    bottom: 0;
    transform: skewY(0deg);
    transform-origin: 100%;
}

#container-footer{
    position: relative;
    z-index: 1;
    transform: skewY(0deg);
}

